scrollbar fix

--- a/res/library.css
+++ b/res/library.css
@@ -589,28 +589,28 @@ body * {
     scrollbar-color: var(--color-bg) transparent;
 }
 
-body::-webkit-scrollbar {
+body *::-webkit-scrollbar {
     width: auto;
     height: auto;
 }
 
-body::-webkit-scrollbar-button,
-body::-webkit-scrollbar-thumb {
+body *::-webkit-scrollbar-button,
+body *::-webkit-scrollbar-thumb {
     background-color: var(--color-bg);
     background-clip: padding-box;
     border: 1px solid transparent;
     border-radius: 5px;
 }
 
-body::-webkit-scrollbar-corner,
-body::-webkit-scrollbar-track {
+body *::-webkit-scrollbar-corner,
+body *::-webkit-scrollbar-track {
     background-color: transparent;
 }
 
 
-body::-webkit-scrollbar-button:hover,
-body::-webkit-scrollbar-thumb:hover,
-body::-webkit-scrollbar-thumb:active {
+body *::-webkit-scrollbar-button:hover,
+body *::-webkit-scrollbar-thumb:hover,
+body *::-webkit-scrollbar-thumb:active {
     background-color: var(--color-accent);
 }
 
